# OpenMP-Dense-Matrix-Multiplication

./: .gitignore  CLAUDE.md  README.md  makefile  meson.build
.claude/: settings.local.json
benchmark/: meson.build  plot.py
benchmark/data/: classic_vs_improved.csv  compare_classic_vs_improved.csv  compare_parallel_loop_permutations.csv  compare_serial_loop_permutations.csv  parallel_permutations.csv  serial_parallel_scaling_classic.csv  serial_parallel_scaling_improved.csv  serial_permutations.csv  tiled.csv
benchmark/data/O0/: parallel_permutations.csv  serial_parallel_scaling_classic.csv  serial_parallel_scaling_improved.csv  serial_permutations.csv  tiled.csv
benchmark/data/O3/: parallel_permutations.csv  serial_parallel_scaling_classic.csv  serial_parallel_scaling_improved.csv  serial_permutations.csv  tiled.csv
benchmark/data/O3_restrict/: parallel_permutations.csv  serial_parallel_scaling_classic.csv  serial_parallel_scaling_improved.csv  serial_permutations.csv  tiled.csv
benchmark/data/Ofast/: parallel_permutations.csv  serial_parallel_scaling_classic.csv  serial_parallel_scaling_improved.csv  serial_permutations.csv  tiled.csv
benchmark/src/: main.py  plot_parallel_permutations.py  plot_serial_parallel_scaling_classic.py  plot_serial_parallel_scaling_improved.py  plot_serial_permutations.py  plot_tiled.py  utils.py
benchmark/src/loop_permutations/parallel/: mm_parallel.c  mm_parallel.h
benchmark/src/loop_permutations/serial/: mm_serial.c
benchmark/src/main/: parallel_loop.c  parameters.h  serial_loop.c
benchmark/src/matrix/: matrix.c  matrix.h
benchmark/src/tiled/serial/: mm_tiled_serial.c  mm_tiled_serial.h
benchmark/src/utils/: utils.c  utils.h
docs/: omp_matrix_mult.c
src/common/: matrix.c  (+1 more)
visualization/: main.py  pyproject.toml
(+37 files in other folders)
